add fees support to tokens backend
