# pkg/wallet/tokens/backend/swagger/openapi_tokens.yaml
@@ -269,6 +269,37 @@ paths:
                 example:
                   ZD75s0+XCi3XwxOp3UxccXY6nM4ZhDnDyYNGoJv5K1U=: "failed to convert transaction: bad type name"
                   v8aSJW4nDxgQf7VxvNh/a60ux7CovgAuJUwJJIJNvAk=: "failed to forward tx: connection refused"
+  /fee-credit-bill:
+    get:
+      tags:
+        - fees
+      summary: Fetches fee credit bill.
+      description: Returns fee credit bill for given bill ID.
+      operationId: getFeeCreditBill
+      parameters:
+        - name: bill_id
+          in: query
+          required: true
+          description: fee credit bill id (SHA256 hash of private key) in hex format.
+          schema:
+            $ref: '#/components/schemas/UnitIDParam'
+      responses:
+        '200':
+          description: fee credit bill returned
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/FeeCreditBill'
+        '400':
+          $ref: '#/components/responses/ErrorResponse'
+        '404':
+          description: fee credit bill was not found for given bill id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     Kind:
@@ -403,6 +434,24 @@ components:
           $ref: '#/components/schemas/transaction.Transaction'
         proof:
           $ref: '#/components/schemas/block_proof.BlockProof'
+    FeeCreditBill:
+      type: object
+      properties:
+        id:
+          type: string
+          format: byte
+        value:
+          type: string
+          description: uint64 value encoded as string
+          example: "1000"
+        txHash:
+          type: string
+          format: byte
+          example: ux5oRDOUCKFCb06vuDOcGPspoBxTYOq9G97mzPAdQxc=
+        fcBlockNumber:
+          type: string
+          description: uint64 value encoded as string
+          example: "1000"
     ErrorResponse:
       description: returned by endpoint in case of bad request or internal error.
       type: object
